# sudoku-cli

./: .gitignore  .travis.yml  Cargo.toml  README.md
ci/: package.sh
src/: main.rs
