[package]
authors = ["Emerentius <Emerentius@arcor.de>"]
name = "sudoku-cli"
version = "0.5.0"
license = "AGPL-3.0"

[[bin]]
name = "rudoku"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"
rayon = "1.0.2"

[dependencies.sudoku]
version = "0.7.0"
features = ["unchecked_indexing"]
git = "https://github.com/Emerentius/sudoku"
rev = "ffa44e9d8458090ea0d56d120d7d1fdb81d517ec"

[features]
# With this feature, multithreading is used unless the --no-parallel flag is passed
# Otherwise a single thread is used unless --parallel is passed
parallel_by_default = []

[profile.release]
lto = true
codegen-units = 1
