[package]
authors = ["Emerentius <Emerentius@arcor.de>"]
name = "sudoku-cli"
version = "0.5.0"
license = "AGPL-3.0"

[[bin]]
name = "rudoku-coz"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"
rayon = "1.0.2"

[dependencies.sudoku]
version = "0.7.0"
features = ["unchecked_indexing"]
git = "https://github.com/Emerentius/sudoku"
rev = "42b61acaad5f930f7deea1f5cdbf2f91ad13e25d"

[features]
# With this feature, multithreading is used unless the --no-parallel flag is passed
# Otherwise a single thread is used unless --parallel is passed
parallel_by_default = []

[profile.release]
# I'm not sure LTO is a problem for coz
# but I had it inactive when I finally got it working
# lto = true
codegen-units = 1
debug = true
